fixed issue where calendar appeared in the bottom left corner. fixed issue where the background overlay was visible while not in mobile fixed.

--- a/src/index.css
+++ b/src/index.css
@@ -72,14 +72,11 @@
   border-radius: 4px;
 }
 
-/*
 .react-datepicker__tab-loop {
-  border: 3px solid red;
-
-  position: fixed;
-  top: 0;
-  left: 0;
+  display: none;
 }
+
+/*
 
 .react-datepicker-popper {
   padding: 4.5rem 1rem 1rem 1rem;
@@ -135,7 +132,7 @@
   display: flex;
   flex-direction: column;
   z-index: 10;
-  height: 100vh;
+  height: 100%;
 }
 
 .sidebarContents h2 {
@@ -162,7 +159,7 @@
   background-color: var(--bgColor);
   opacity: 0;
   animation: appear 0.25s ease 0.25s forwards;
-  height: 100vh;
+  height: 100%;
 }
 
 .sidebarContents {
@@ -176,8 +173,9 @@
 
   overflow-y: auto;
   overflow-x: hidden;
-  height: 100%;
+
   width: 80%;
+  height: 100%;
 
   max-width: 600px;
   margin-left: auto;
